fixing overflow

--- a/web/src/main/component/mainComponent.scss
+++ b/web/src/main/component/mainComponent.scss
@@ -1,7 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 body {
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .app {
